# libtracer

./: .gitignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  NOTICE  README.md  TRADEMARKS.md  index.html  index.md  library.json
.github/: CONTRIBUTING.md  GOVERNANCE.md  RELEASING.md  TRADEMARKS.md
.github/ISSUE_TEMPLATE/: rfc.md
.github/workflows/: can-vcan-e2e.yml  capability-matrix.yml  conformance.yml  core-ci.yml  docs.yml  esp-idf.yml  footprint-cortexm0.yml  mermaid-lint.yml  mesh-testbed.yml  perf.yml  publish-npm.yml  quic.yml  release.yml  ts.yml  version-consistency.yml  wireshark-dissector.yml  ws-interop.yml
bench/: .gitignore  CMakeLists.txt  README.md  RESULTS.md  bench_await_wakeup_storm.cpp  bench_codec.cpp  bench_common.hpp  bench_fanout_clone_storm.cpp  bench_forward_heap.cpp  bench_libtracer.cpp  bench_libtracer_net.cpp  bench_net.hpp  bench_route_handle_contention.cpp  bench_scatter.cpp  bench_transports.cpp  bench_zenoh.cpp  bench_zenoh_net.cpp  bench_zenoh_transports.cpp  collate.py  fetch_zenoh.sh  gen_results_page.py  gen_test_report.py  grid.csv  grid.sh  heap_probe.hpp  perf_emit_benchmark.py  perf_gate.py  plot.py  render_compare.py  render_history.py  run.sh  run_net.sh  vendor
bindings/: README.md
bindings/ros2/: CMakeLists.txt  README.md  package.xml
bindings/ros2/src/rmw_tracer/: identity.c
bindings/rust/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
bindings/rust/examples/: conformance.rs  perf.rs
bindings/rust/src/: error_registry.rs  field.rs  fwd.rs  lib.rs  path.rs  structured.rs  tlv_builders.rs
bindings/rust/tests/: conformance_vectors.rs
bindings/typescript/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  typedoc.json
core/: CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  STYLE.md
core/cmake/: libtracerConfig.cmake.in
core/examples/: CMakeLists.txt  in_process_pubsub.cpp  pubsub_fanout.cpp  rope_scatter.cpp  tree_of_ropes.cpp  two_node_fwd.cpp  two_node_loopback.cpp  udp_two_node.cpp  wire_codec.cpp  wire_roundtrip.cpp
core/include/libtracer/: .gitkeep  backend.hpp  bridge.hpp  builtin_transports.hpp  byteorder.hpp  can.hpp  can_reassembly.hpp  can_tx_pool.hpp  child_registry.hpp  config_reader.hpp  crc.hpp  error.hpp  frame.hpp  fwd_frame_view.hpp  fwd_router.hpp  grammar.hpp  graph.hpp  key_view.hpp  length_prefix_framer.hpp  loopback.hpp  mem_borrowed.hpp  mem_can_reassembly.hpp  mem_cuda.hpp  mem_heap.hpp  mem_pool.hpp  op_resolve.hpp  path.hpp  posix_endpoint.hpp  receiver_slot.hpp  rope.hpp  rope_decode.hpp  route_handle.hpp  router.hpp  security_acl.hpp  segment.hpp  serdes.h  status.hpp  tlv.h  tlv.hpp  tlv_arena.hpp  (+17 more)
core/src/: backend_set.cpp  bridge.cpp  builtin_transport_tcp.cpp  builtin_transport_udp.cpp  builtin_transport_ws.cpp  builtin_transports.cpp  builtin_transports.cpp.in  frame.cpp  fwd_router.cpp  graph.cpp  loopback.cpp  mem_cuda.cpp  mem_heap.cpp  mem_pool.cpp  msquic_endpoint.hpp  op_resolve.cpp  op_resolve_view.cpp  op_resolve_walk.hpp  path.cpp  posix_endpoint.cpp  rope.cpp  rope_decode.cpp  route_handle.cpp  router.cpp  socketcan_link.cpp  socketcan_link_stub.cpp  tlv_arena.cpp  tlv_view.cpp  transport_can.cpp  transport_quic.cpp  transport_tcp.cpp  transport_udp.cpp  transport_vertex.cpp  transport_webtransport.cpp  transport_ws.cpp  wt_h3.hpp
core/tests/: CMakeLists.txt  acl_test.cpp  app_fields_test.cpp  bridge_test.cpp  byteorder_test.cpp  can_frames_test.cpp  can_tx_pool_test.cpp  children_test.cpp  conformance_runner.cpp  cuda_test.cpp  edge_eviction_test.cpp  effective_acl_test.cpp  folded_children_test.cpp  frame_test.cpp  fwd_compact_test.cpp  fwd_fanout_test.cpp  fwd_frame_view_test.cpp  fwd_multihop_test.cpp  fwd_node_server.cpp  fwd_rope_forward_test.cpp  graph_oom_softfail_test.cpp  graph_pmr_test.cpp  graph_test.cpp  graph_value_backend_test.cpp  identity_test.cpp  key_view_test.cpp  length_prefix_framer_test.cpp  mem_sync_pool_test.cpp  mesh_node.cpp  op_resolve_test.cpp  op_resolve_view_test.cpp  path_test.cpp  quic_test.cpp  retire_test.cpp  rope_decode_fuzz_test.cpp  rope_decode_test.cpp  rope_test.cpp  route_handle_test.cpp  security_acl_test.cpp  substrate_test.cpp  (+21 more)
core/tests/footprint/: sentinel_node.cpp
dev/bench/: data.js
docs/: 00-vision-and-reality-check.md  01-comparison-to-existing-protocols.md  03-wire-format-and-data-model.md  05-modules-transport-and-discovery.md  99-glossary.md  capability-matrix.md  conf.py  getting-started.md  implementations.md  index.md  interoperability.md  methodology.md  performance.md  requirements.txt  test-report.md
docs/_extra/: CNAME  robots.txt
docs/_static/: custom.css  ltz_compare.css  ltz_compare.js  perf_history.css  perf_history.js  version-switcher.css  version-switcher.js
docs/adr/: 0001-extract-reference-implementation-from-strawberry-fw.md  0001-extraction-from-production-firmware.md  0002-versioning-protocol-vs-release-no-per-frame-version.md  0003-retire-list-type-code-0x05.md  0004-crc-in-optional-trailer.md  0005-fixed-width-length-opt-ll.md  0006-read-write-await-api-no-connect.md  (+54 more)
docs/spec/: v1.md  (+2 more)
examples/: LICENSE
implementations/: README.md
integrations/: README.md
integrations/esp-idf/examples/full_node/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  platform.hpp  platform_esp.cpp  platform_linux.cpp
integrations/esp-idf/examples/host_smoke/main/: CMakeLists.txt  app_main.cpp
integrations/esp-idf/libtracer/: CHANGELOG.md  CMakeLists.txt  Kconfig  httpd_ws_link.cpp  idf_component.yml  twai_link.cpp
integrations/esp-idf/libtracer/compat/include/: poll.h
integrations/esp-idf/libtracer/include/libtracer_esp/: httpd_ws_link.hpp  twai_link.hpp
libtracer/: serdes.h  tlv.h  tlv_string.hpp  tlv_vector.hpp  tracer.h  tracer.hpp
scripts/: build-ros.sh  test-cuda.sh
tests/packaging/: CMakeLists.txt  main.cpp
tools/: assemble_release_docs.sh  check_esp_srcs.py  cortexm0_footprint.py  esp_size_gate.py  gen-dev-cert.sh  gen_capability_matrix.py  gen_release_notes.py  gen_versions_json.py  sync-version.py
(+194 files in other folders)
